--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "frontend": "cd frontend && npm run dev",
     "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
     "start": "node backend/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Bastien & Zakaria",
   "license": "ISC",
@@ -29,6 +29,11 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0",
     "vite": "^5.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
